@@ -8,7 +8,7 @@
 
 	<groupId>com.nqadmin.swingset</groupId>
 	<artifactId>swingset</artifactId>
-	<version>4.0.12</version>
+	<version>5.0.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>swingset</name>
@@ -19,38 +19,43 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
 		<!-- MAVEN AND JAVA VERSIONS -->
-		<version.maven>3.6.3</version.maven>
-		<version.java>8</version.java>
+		<version.maven>3.8.7</version.maven>
+		<version.java>21</version.java>
 
 		<!-- DEPENDENCIES -->
 		<!--<version.glazedlists>1.11.0</version.glazedlists> -->
 		<version.glazedlists>1.11.1203</version.glazedlists>
-		<version.log4j>2.22.0</version.log4j>
-		<version.jdbcrowsetimpl>1.0.3</version.jdbcrowsetimpl>
+		<version.table-sort-header>1.0.1</version.table-sort-header>
+		<version.google-guava>33.0.0-jre</version.google-guava>
+		<version.netbeans>RELEASE200</version.netbeans>
 
 		<!-- PLUGINS -->
 		<!-- Shared by swingset-parent, swingset, and swingset-demo -->
-		<version.versions-maven-plugin>2.16.2</version.versions-maven-plugin>
-		<version.maven-enforcer-plugin>3.4.1</version.maven-enforcer-plugin>
-		<version.maven-clean-plugin>3.3.2</version.maven-clean-plugin>
-		<version.maven-deploy-plugin>3.1.1</version.maven-deploy-plugin>
-		<version.maven-install-plugin>3.1.1</version.maven-install-plugin>
-		<version.maven-site-plugin>4.0.0-M12</version.maven-site-plugin>
+		<version.versions-maven-plugin>2.17.1</version.versions-maven-plugin>
+		<version.maven-enforcer-plugin>3.5.0</version.maven-enforcer-plugin>
+		<version.maven-clean-plugin>3.4.0</version.maven-clean-plugin>
+		<version.maven-deploy-plugin>3.1.3</version.maven-deploy-plugin>
+		<version.maven-install-plugin>3.1.3</version.maven-install-plugin>
+		<version.maven-site-plugin>4.0.0-M16</version.maven-site-plugin>
 
 		<!-- Shared by swingset and swingset-demo -->
-		<version.maven-jar-plugin>3.3.0</version.maven-jar-plugin>
+		<version.maven-jar-plugin>3.4.2</version.maven-jar-plugin>
 		<version.maven-resources-plugin>3.3.1</version.maven-resources-plugin>
-		<version.maven-compiler-plugin>3.11.0</version.maven-compiler-plugin>
-		<version.dependency-check-maven>9.0.7</version.dependency-check-maven>
-		<version.maven-gpg-plugin>3.1.0</version.maven-gpg-plugin>
-		<version.maven-surefire-plugin>3.2.3</version.maven-surefire-plugin>
-		<version.maven-source-plugin>3.3.0</version.maven-source-plugin>
+		<version.maven-compiler-plugin>3.13.0</version.maven-compiler-plugin>
+		<version.dependency-check-maven>11.1.0</version.dependency-check-maven>
+		<version.maven-gpg-plugin>3.2.7</version.maven-gpg-plugin>
+		<version.maven-surefire-plugin>3.5.1</version.maven-surefire-plugin>
+		<version.maven-source-plugin>3.3.1</version.maven-source-plugin>
 
 		<!-- swingset-only -->
-		<version.maven-javadoc-plugin>3.6.3</version.maven-javadoc-plugin>
-		<version.nexus-staging-maven-plugin>1.6.13</version.nexus-staging-maven-plugin>
-		<version.maven-failsafe-plugin>3.2.3</version.maven-failsafe-plugin>
-		<version.junit-jupiter-any>5.10.1</version.junit-jupiter-any>
+		<version.maven-javadoc-plugin>3.10.1</version.maven-javadoc-plugin>
+		<version.nexus-staging-maven-plugin>1.7.0</version.nexus-staging-maven-plugin>
+		<version.maven-failsafe-plugin>3.5.1</version.maven-failsafe-plugin>
+		<!-- testing --> 
+		<version.junit-jupiter-any>5.11.3</version.junit-jupiter-any>
+		<version.mockito>5.14.2</version.mockito>
+		<version.h2>2.3.232</version.h2>
+		<version.jdbcrowsetimpl>1.0.3</version.jdbcrowsetimpl>
 	</properties>
 
 	<licenses>
@@ -123,19 +128,24 @@
 			<artifactId>glazedlists</artifactId>
 			<version>${version.glazedlists}</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.netbeans.api/org-openide-util-lookup -->
+		<dependency>
+			<groupId>org.netbeans.api</groupId>
+			<artifactId>org-openide-util-lookup</artifactId>
+			<version>${version.netbeans}</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>${version.google-guava}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.raelity.jdk</groupId>
+			<artifactId>table-sort-header-renderer</artifactId>
+			<version>${version.table-sort-header}</version>
+		</dependency>
 
-		<!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-api -->
-		<dependency>
-			<groupId>org.apache.logging.log4j</groupId>
-			<artifactId>log4j-api</artifactId>
-			<version>${version.log4j}</version>
-		</dependency>
-		<!-- https://mvnrepository.com/artifact/com.nqadmin.rowset/jdbcrowsetimpl -->
-		<dependency>
-			<groupId>com.nqadmin.rowset</groupId>
-			<artifactId>jdbcrowsetimpl</artifactId>
-			<version>${version.jdbcrowsetimpl}</version>
-		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-surefire-plugin -->
 		<dependency>
 			<groupId>org.apache.maven.plugins</groupId>
@@ -170,9 +180,36 @@
 			<version>${version.junit-jupiter-any}</version>
 			<scope>test</scope>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.mockito/mockito-core -->
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-core</artifactId>
+			<version>${version.mockito}</version>
+			<scope>test</scope>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.mockito/mockito-junit-jupiter -->
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-junit-jupiter</artifactId>
+			<version>${version.mockito}</version>
+			<scope>test</scope>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.h2database/h2 -->
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<version>${version.h2}</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
+		<resources>
+			<resource>
+				<directory>src/main/resources</directory>
+				<filtering>true</filtering>
+			</resource>
+		</resources>
 		<plugins>
 			<!--
 			https://mvnrepository.com/artifact/org.codehaus.mojo/versions-maven-plugin -->
@@ -181,6 +218,45 @@
 				<artifactId>versions-maven-plugin</artifactId>
 				<version>${version.versions-maven-plugin}</version>
 			</plugin>
+
+			<!-- Added from https://github.com/eppleton/frgaal -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>${version.maven-compiler-plugin}</version>
+				<dependencies>
+					<dependency>
+						<groupId>org.frgaal</groupId>
+						<artifactId>compiler-maven-plugin</artifactId>
+						<version>21.0.0</version>
+					</dependency>
+				</dependencies>
+				<configuration>
+					<compilerId>frgaal</compilerId>
+					<source>21</source>
+					<target>11</target>
+					<compilerArgs>
+						<arg>-Xlint:deprecation</arg>
+						<!--only needed when using preview language features-->
+						<!-- <arg>- -enable-preview</arg> -->
+						<arg>--enable-preview</arg>
+					</compilerArgs>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+				<version>${version.maven-jar-plugin}</version>
+				<configuration>
+					<archive>
+						<manifestEntries>
+							<Multi-Release>true</Multi-Release>
+						</manifestEntries>
+					</archive>
+				</configuration>
+			</plugin>
+			<!-- End frgaal -->
+
 			<!-- Maven Enforcer forces specified version of Java and Maven -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -228,11 +304,13 @@
 				<artifactId>maven-install-plugin</artifactId>
 				<version>${version.maven-install-plugin}</version>
 			</plugin>
+			<!-- Included above with frgaal
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-jar-plugin</artifactId>
 				<version>${version.maven-jar-plugin}</version>
 			</plugin>
+			-->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-resources-plugin</artifactId>
@@ -244,15 +322,18 @@
 				<version>${version.maven-site-plugin}</version>
 			</plugin>
 
+			<!--$NO-MVN-MAN-VER$-->
+			<!-- Included above with frgaal
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>${version.maven-compiler-plugin}</version><!--$NO-MVN-MAN-VER$-->
+				<version>${version.maven-compiler-plugin}</version>
 
 				<configuration>
 					<release>${version.java}</release>
 				</configuration>
 			</plugin>
+			-->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
@@ -317,6 +398,13 @@
 						<configuration>
 							<release>${version.java}</release>
 							<failOnError>false</failOnError>
+							<additionalOptions>-html5</additionalOptions>
+							<doclint>all,-missing,-html</doclint>
+<!--
+							<links>
+								<link>https://javadoc.io/static/com.glazedlists/glazedlists/${version.glazedlists}</link>
+							</links>
+-->
 						</configuration>
 						<executions>
 							<execution>
@@ -383,6 +471,9 @@
 			  Removing these checks is not too bad since there's a lot of
 			  dependency on the IDE for most checking.
 		-->
+		
+		
+		<!-- Hopefully we can comment this out now that we're requiring Java 11+.
 		<profile>
 			<id>java-9-plus</id>
 			<activation>
@@ -415,6 +506,8 @@
 				</pluginManagement>
 			</build>
 		</profile>
+		-->
+		
 	</profiles>
 
 </project>
